[gd_scene load_steps=17 format=3 uid="uid://b2iw04utfdftj"]

[ext_resource type="Script" path="res://scripts/mobs/o2_burbuja.gd" id="1_76j5c"]
[ext_resource type="Texture2D" uid="uid://cjr23lvrhmxe3" path="res://resources/sprites_prueba/XAVIERREVENTADO.png" id="2_pwpri"]
[ext_resource type="Texture2D" uid="uid://corvgj7hf51ll" path="res://resources/sprites_prueba/XAVIERBURBUJA.png" id="3_pqg10"]

[sub_resource type="AtlasTexture" id="AtlasTexture_qiv5h"]
atlas = ExtResource("2_pwpri")
region = Rect2(0, 0, 125, 125)

[sub_resource type="AtlasTexture" id="AtlasTexture_r85p7"]
atlas = ExtResource("2_pwpri")
region = Rect2(125, 0, 125, 125)

[sub_resource type="AtlasTexture" id="AtlasTexture_kir2k"]
atlas = ExtResource("2_pwpri")
region = Rect2(250, 0, 125, 125)

[sub_resource type="AtlasTexture" id="AtlasTexture_a6vee"]
atlas = ExtResource("2_pwpri")
region = Rect2(375, 0, 125, 125)

[sub_resource type="AtlasTexture" id="AtlasTexture_fi8e8"]
atlas = ExtResource("2_pwpri")
region = Rect2(500, 0, 125, 125)

[sub_resource type="AtlasTexture" id="AtlasTexture_6g6rf"]
atlas = ExtResource("2_pwpri")
region = Rect2(625, 0, 125, 125)

[sub_resource type="AtlasTexture" id="AtlasTexture_1an4t"]
atlas = ExtResource("3_pqg10")
region = Rect2(0, 0, 125, 125)

[sub_resource type="AtlasTexture" id="AtlasTexture_eekce"]
atlas = ExtResource("3_pqg10")
region = Rect2(125, 0, 125, 125)

[sub_resource type="AtlasTexture" id="AtlasTexture_85p4s"]
atlas = ExtResource("3_pqg10")
region = Rect2(250, 0, 125, 125)

[sub_resource type="AtlasTexture" id="AtlasTexture_qs86s"]
atlas = ExtResource("3_pqg10")
region = Rect2(375, 0, 125, 125)

[sub_resource type="SpriteFrames" id="SpriteFrames_5lf2r"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qiv5h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r85p7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kir2k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a6vee")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fi8e8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6g6rf")
}],
"loop": false,
"name": &"break",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1an4t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eekce")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_85p4s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qs86s")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_ari5y"]

[sub_resource type="CircleShape2D" id="CircleShape2D_hjn7h"]

[node name="o2_burbuja" type="RigidBody2D"]
modulate = Color(0.363832, 1, 0.849509, 1)
position = Vector2(1, 3)
mass = 0.1
gravity_scale = -0.1
script = ExtResource("1_76j5c")

[node name="Sprite2D" type="AnimatedSprite2D" parent="."]
modulate = Color(0.159264, 0.245918, 0.659181, 1)
position = Vector2(1, -3)
scale = Vector2(0.633385, 0.633385)
sprite_frames = SubResource("SpriteFrames_5lf2r")
animation = &"break"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2(2.39355, 2.39355)
shape = SubResource("CircleShape2D_ari5y")

[node name="Aumentar vida" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Aumentar vida"]
scale = Vector2(3.0742, 3.0742)
shape = SubResource("CircleShape2D_hjn7h")

[node name="Timer" type="Timer" parent="."]
wait_time = 4.0
one_shot = true
autostart = true

[node name="Timer2" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[connection signal="area_entered" from="Aumentar vida" to="." method="_on_area_2d_area_entered"]
[connection signal="body_entered" from="Aumentar vida" to="." method="_on_area_2d_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_timer_2_timeout"]
